tests/snapshots/jit_spec__tests__executor_arguments_default_value.snap
---
source: tests/jit_spec.rs
expression: data
---
{
  "user2": {
    "id": 1,
    "name": "Leanne Graham"
  }
}
