tests/snapshots/jit_spec__tests__executor_fragments_nested.snap
---
source: tests/jit_spec.rs
expression: data
---
{
  "posts": [
    {
      "id": 1,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 2,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 3,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 4,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 5,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 6,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 7,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 8,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 9,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 10,
      "user": {
        "id": 1,
        "name": "Leanne Graham",
        "email": "Sincere@april.biz",
        "phone": "1-770-736-8031 x56442",
        "username": "Bret"
      }
    },
    {
      "id": 11,
      "user": {
        "id": 2,
        "name": "Ervin Howell",
        "email": "Shanna@melissa.tv",
        "phone": "010-692-6593 x09125",
        "username": "Antonette"
      }
    }
  ]
}
