tests/snapshots/jit_spec__tests__executor_variables-2.snap
---
source: tests/jit_spec.rs
expression: response
snapshot_kind: text
---
{
  "data": {
    "user": {
      "id": 1,
      "name": "Leanne Graham"
    }
  }
}
