tests/snapshots/jit_spec__tests__executor_variables.snap
---
source: tests/jit_spec.rs
expression: data
---
{
  "data": {
    "user": {
      "id": 1,
      "name": "Leanne Graham"
    }
  }
}
