tests/snapshots/jit_spec__tests__operation_plan_cache.snap
---
source: tests/jit_spec.rs
expression: response
snapshot_kind: text
---
{
  "data": null,
  "errors": [
    {
      "message": "Build error: ResolveInputError: Variable `id` is not defined",
      "locations": [
        {
          "line": 0,
          "column": 0
        }
      ]
    }
  ]
}
