tests/snapshots/jit_spec__tests__query_alias.snap
---
source: tests/jit_spec.rs
expression: data
---
{
  "user1": {
    "id": 1,
    "name": "Leanne Graham"
  },
  "user2": {
    "id": 2,
    "name": "Ervin Howell"
  }
}
